--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="stact">
             <span>2022</span>
             <span class="titulo">Outros catalogos</span>
-            <span>Scroll</span>
+            <span>Scroll <strong><i class="bi bi-right"></i></strong></span>
         </div>
 
         <!-- <article class="catalogo">
