titulo e texto ajustado

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
             <span>Scroll <strong><i class="bi bi-right"></i></strong></span>
         </div>
 
-        <!-- <article class="catalogo">
+        <article class="catalog">
             <ul>
                 <li>
                     <div class="_">
-                        <h1>Mouse Bluetooth & USB</h1>
-                        <div class="img">
+                        <div class="tit_">
+                            <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
+                        </div>
+                        <!-- <div class="img">
                             <img src="assets/src/mouse.png" alt="">
                         </div>
 
@@ -59,14 +61,14 @@
                                     mais <i class="bi bi-right"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="count">
                         <h1>01</h1>
                     </div>
                 </li>
             </ul>
-        </article> -->
+        </article>
     </section>
 </body>
 </html>
