--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sholing</title>
-    <link rel="stylesheet" href="assets/sass/index.css">
+    <link rel="stylesheet" href="assets/style/index.css">
 </head>
 <body>
     <header>
@@ -14,9 +14,14 @@
                 <strong><i></i><i></i></strong>
                 <strong><i></i><i></i></strong>
             </span>
-            <span class="a_">Categoria 
+            <div class="a_">Categoria 
                 <i class="bi bi-rect-down"></i>
-            </p>
+                <label for="lista-categoria">
+                    <a href="">Roupas</a>
+                    <a href="">Eletronicos</a>
+                    <a href="">Alimentação</a>
+                </label>
+            </div>
         </div>
         <h1>Sholing</h1>
         <nav>
@@ -25,7 +30,7 @@
                 <li><a target="_black" href="https://www.linkedin.com/in/tomasmanueltm"><i class="bi bi-linkedin" title="Linkedin"></i></a></li>
                 <li><a target="_black" href="https://www.facebook.com/tomasmanueltm"><i class="bi bi-facebook" title="Facebook"></i></a></li>
             </ul>
-            <span>Tecnológia</span>
+            <span>Design</span>
         </nav>
     </header>
     <!--  -->
@@ -39,7 +44,7 @@
         <article class="catalog">
             <ul>
     
-                <li style="--f:#463c37;">
+                <li class="a" style="--f:#463c37;">
                     <div class="_">
                         <div class="tit_">
                             <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
@@ -70,7 +75,7 @@
                             <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
                         </div>
                         <div class="img">
-                            <img src="assets/src/relogio.png" alt="">
+                            <img src="assets/src/tenis.png" alt="">
                         </div>
                      
                         <div class="legenda">
@@ -91,10 +96,10 @@
                 </li>
             </ul>
 
-            <hgroup class="controls">
+            <!-- <hgroup class="controls">
                 <h2>01</h2>
                 <h2>02</h2>
-            </hgroup>
+            </hgroup> -->
         </article>
     </section>
 </body>
