index scroll feito

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <article class="catalog">
             <ul>
     
-                <li class="a" style="--f:#463c37;">
+                <li class="a" data-color="#463c37" style="--color:#463c37;">
                     <div class="_">
                         <div class="tit_">
                             <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
@@ -69,7 +69,34 @@
                         </div>
                     </div>
                 </li>
-                <li style="--f:#f47535;">
+                <li data-color="#f47535" style="--color:#f47535;">
+                    <a class="indicador-next"><i class="bi bi-lef"></i></a>
+                    <div class="_">
+                        <div class="tit_">
+                            <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
+                        </div>
+                        <div class="img">
+                            <img src="assets/src/tenis.png" alt="">
+                        </div>
+                     
+                        <div class="legenda">
+                            <div class="_valor">
+                                <p>Preço<span>KZ 1500</span></p>
+                            </div>
+                            <hgroup class="_hgrou">
+                                <h1>Virtual Reality wherever you are.</h1>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita voluptatum non animi quisquam necessitatibus rerum itaque sed iusto laudantium.</p>
+                            </hgroup>
+                            <div class="_href">
+                                <a href="">
+                                    Learn more <i class="bi bi-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li data-color="#f47535" style="--color:#ffc10e;">
+                    <a class="indicador-next"><i class="bi bi-lef"></i></a>
                     <div class="_">
                         <div class="tit_">
                             <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
