objetivo scroll alcançado

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div class="stact">
             <span>2022</span>
             <span class="titulo">Outros catalogos</span>
-            <span>Scroll <strong><i class="bi bi-right"></i></strong></span>
+            <span class="scroll-next">Scroll <strong><i class="bi bi-right"></i></strong></span>
         </div>
 
         <article class="catalog">
             <ul>
-    
                 <li class="a" data-color="#463c37" style="--color:#463c37;">
+                    <a class="indicador-next"><i class="bi bi-lef"></i></a>
                     <div class="_">
                         <div class="tit_">
                             <h1 data-name="Mouse Bluetooth & USB">Mouse Bluetooth & USB</h1>
@@ -123,11 +123,13 @@
                 </li>
             </ul>
 
-            <!-- <hgroup class="controls">
+            <hgroup class="controls">
                 <h2>01</h2>
                 <h2>02</h2>
-            </hgroup> -->
+            </hgroup>
         </article>
     </section>
+
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
